tampilan flight crud -zain push

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,6 +64,7 @@
     <string name="adult">Adult</string>
     <string name="more_info">more info</string>
     <string name="flight_no">Flight No</string>
+    <string name="total_passenger">Total Passenger</string>
 
     <!--  dummy country  -->
     <string-array name="country">
