--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,11 +65,13 @@
     <string name="more_info">more info</string>
     <string name="flight_no">Flight No</string>
     <string name="total_passenger">Total Passenger</string>
-    <string name="create_ticket">Create Ticket</string>
+    <string name="create_flight">Create Flight</string>
     <string name="depature_time">Depature Time</string>
     <string name="arrival_time">Arrival Time</string>
     <string name="input_price">Input Price :</string>
     <string name="create">CREATE</string>
+    <string name="flight_name">Flight: </string>
+    <string name="update">UPDATE</string>
 
     <!--  dummy country  -->
     <string-array name="country">
