Flight detail update 2

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,4 +103,9 @@
         <item>Business</item>
         <item>Economy</item>
     </string-array>
+
+    <integer-array name="classTypeId">
+        <item>1</item>
+        <item>2</item>
+    </integer-array>
 </resources>
