Feature added : - Fix spinner error - Adding dialog when click delete

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,8 +104,8 @@
         <item>Economy</item>
     </string-array>
 
-    <integer-array name="classTypeId">
+    <string-array name="classTypeId">
         <item>1</item>
         <item>2</item>
-    </integer-array>
+    </string-array>
 </resources>
